# gnetman

./: AUTHORS  Makefile.am  README  autogen.sh  config.h  configure.ac  index.html  system-gnetmanrc.tcl
doc/: Makefile.am  index.html  programming.html
sch/: Makefile.am  clkinv.sch  dffr.sch  inv.sch  nand2.sch  nand3.sch  nor2.sch  nor3.sch  passtrans.sch
src/: Makefile.am  fubar.c
src/attrproc/: AttrProc.dd  Makefile.am  at.h  atparse.y  atscan.l  attrproc.c
src/batch/: Makefile.am  bamain.c  configure  configure.rdp  makemake
src/database/: Database.dd  Makefile.am  dbbuild.c  dbmain.c  dbnetlist.c  dbquery.c  dbshort.c
src/generate/: Makefile.am  generate.c
src/guile/: gu.h  gumain.c
src/hash/: Hash.dd  Makefile.am  hthash.c
src/include/: Makefile.am  atext.h  cirext.h  db.h  dbtypedef.h  geext.h  guext.h  htext.h  pcbext.h  schext.h  tcext.h  tcl_license.terms  tk.h  utbox.h  utvalue.h  vrext.h
src/layout/: Rtree.dd  rtree.c  rtree.h
src/pcb/: Makefile.am  pcb.h  pcbread.c  pcbwrite.c
src/sch/: Makefile.am  Schematics.dd  sch.h  schbuild.c  schgensym.c  schmain.c  schnetlist.c  schpost.c  schread.c  schshort.c  schtypes.h  schwrite.c
src/spice/: Makefile.am  SpiceNetlist.dd  cir.h  cirlex.c  cirparse.y  cirread.c  cirscan.l  cirwrite.c  cirytab.c  cirytab.h
src/tcl/: Makefile.am  tc.h  tclfunc.c  tclfunc.h  tclfunc.i  tclfunc_wrap.c  tclwrap.c
src/util/: DatadrawUtil.dd  Makefile.am  utbox.c  utvalue.c
src/verilog/: Makefile.am  Verilog.dd  vr.h  vrparse.y  vrread.c  vrscan.l  vrwrite.c
sym/: Makefile.am  avdd.sym  avss.sym  capacitor-1.sym  cvstitle.sym  gnd.sym  idc-1.sym  inductor-1.sym  nor2.sym  nor3.sym  npn.sym  pnp.sym  vccs-1.sym  vcvs-1.sym  vdc-1.sym  vpulse-1.sym  vpwl-1.sym
test/: Makefile.am  bustest.sch  bustest.sym  bustop.sch  commatest.sch  reg32.sch  reg32.sym  resistor.cf  run_spicetest.cir  shifter.sch  shifter.sym  sim_test.sch  spicecomp.sch  spicetest.sch
