symdir = $(datadir)/gEDA/sym/gnetman

sym_DATA= \
	avdd.sym \
	avss.sym \
	capacitor-1.sym \
	ccvs-1.sym \
	clkinv.sym \
	cvstitle.sym \
	dffr.sym \
	gnd.sym \
	idc-1.sym \
	in.sym \
	inductor-1.sym \
	inv.sym \
	io.sym \
	lat.sym \
	latr.sym \
	nand2.sym \
	nand3.sym \
	nmos.sym \
	nmos4.sym \
	nor2.sym \
	npn.sym \
	out.sym \
	passtrans.sym \
	pmos.sym \
	pmos4.sym \
	pnp.sym \
	resistor-1.sym \
	vccs-1.sym \
	vcvs-1.sym \
	vdc-1.sym \
	vdd.sym \
	vpulse-1.sym \
	vpwl-1.sym \
	vss.sym

EXTRA_DIST = $(sym_DATA)
